--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
 			".gitignore",
 			".jshintrc",
 			"**/*.txt",
-			"**/*."
+			"**/*.",
+			"templateEx1/app"
 		],
 	"dependencies": {
 		"jquery" : ">=1.10.2"
